# FingerPerc

./: README.md  keyStoreForFirstAndroidRelease.jks  private_key.pepk  settings.gradle
app/: build.gradle
app/Documentation/: Declarations.puml  Full.puml  Invocation.puml  packages.puml  playDependencies.puml  playSampleSequence.puml  playZoneSequence.puml  prepareDependencies.puml  prepareSamplesSequence.puml  prepareTriggerSequence.puml  prepareZoneSequence.puml
app/Documentation/RenderedImages/: RenderedImages.md
app/src/androidTest/java/com/tunepruner/bomboleguerodemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/bombo/centro/mp3/: script.sh
app/src/main/cpp/: CMakeLists.txt  NativePlayer.cpp  NativePlayer.h
app/src/main/res/drawable/: border_top_bottom.xml  ic_fp_bomboleguero_head.xml  ic_fp_bomboleguero_rim.xml
app/src/main/res/layout/: activity_launch_screen.xml  activity_main.xml  playable_area.xml  playable_area_2.xml
app/src/main/res/mipmap-anydpi-v26/: arrow_png.xml  cajon_center_atrest_round.xml  cajon_center_onhit.xml  cajon_top_atrest_round.xml  cajon_top_onhit.xml  head_no_blur_png.xml  head_png_round.xml  line_png.xml  rim_no_blur_png.xml  rim_png.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
bomboleguerosamples/: script copy.sh
bombolegurosamples/: script.sh
gradle/wrapper/: gradle-wrapper.properties
iolib/src/main/cpp/: CMakeLists.txt
parselib/src/main/cpp/: CMakeLists.txt
(+157 files in other folders)
